fixed kasutatud allikad links not displaying properly on mobile

--- a/programming.css
+++ b/programming.css
@@ -122,6 +122,9 @@ ul li {
     margin-top: 64px;
 }
 
+#kasutatud {
+    margin-bottom: 32px;
+}
 a:link {
     color: var(--link-unvisited-color);
     background-color: transparent;
